# internal/domain/customer/model.go
@@ -1,11 +1,12 @@
-package modules_customer
+package customer
 
-type Customer interface {
-}
+import "time"
 
-type CustomerImpl struct {
-	CustomerId      int      `json:"customer_id"`
-	CustomerTgId    string   `json:"customer_telegram_id"`
-	CustomerName    string   `json:"customer_name"`
-	CustomerAddress []string `json:"customer_address"`
+type Customer struct {
+	Id          int       `json:"customer_id"`
+	TgId        string    `json:"customer_telegram_id"`
+	Name        string    `json:"customer_name"`
+	Address     []string  `json:"customer_address"`
+	CreatedAt   time.Time `json:"customer_created_at"`
+	PhoneNumber string    `json:"phone_number"`
 }
