# internal/handlers/customers.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"miniapp/internal/dto"
 	"net/http"
 	"strconv"
@@ -15,22 +16,29 @@ import (
 //	@Tags			customer
 //	@Produce		json
 //	@Param			id	path		int	true	"Customer ID"
-//	@Success		200	{object}	dto.CustomerDTO
+//	@Success		200	{object}	dto.WebLoadCustomerDTO
 //	@Failure		400	{object}	handlers.Error
 //	@Failure		401	{object}	handlers.Error
-//	@Router			/customers/:id [get]
+//	@Router			/customer/{id} [get]
 func (h *Handler) GetCustomerById(c *gin.Context) {
-	ctx := c.Request.Context()
-	id, err := strconv.ParseInt(c.Params.ByName("id"), 10, 64)
-	if err != nil {
-		SendError(c, http.StatusBadRequest, Result{data: "incorrect id", err: err})
-		return
-	}
-	customer, err := h.storage.LoadCustomer(ctx, int(id))
-	if err != nil {
-		SendError(c, http.StatusNotFound, Result{data: "FAIL: error get menu position", err: err})
-	}
-	c.JSON(http.StatusOK, customer)
+
+	idStr := c.Params.ByName("id")
+	id := 0
+	_, err := fmt.Scanf(idStr, "%d", &id)
+
+	c.JSON(http.StatusOK, gin.H{
+		"err": err,
+		"id":  id,
+	})
+
+	// if err != nil {
+	// 	SendError(c, http.StatusNotFound, Result{data: "incorrect id", err: err})
+	// }
+	// customer, err := h.customerService.Load(id)
+	// if err != nil {
+	// 	SendError(c, http.StatusNotFound, Result{data: "FAIL: error get menu position", err: err})
+	// }
+	// c.JSON(http.StatusOK, customer)
 	// SendSuccess(c, http.StatusOK, Result{data: customer, err: err})
 }
 
@@ -41,20 +49,19 @@ func (h *Handler) GetCustomerById(c *gin.Context) {
 //	@Tags			customer
 //	@Accept			json
 //	@Produce		json
-//	@Param			account	body		dto.CustomerDTO	true	"Customer create data"
+//	@Param			account	body		dto.WebCreateCustomerDTO	true	"Customer create data"
 //	@Success		200		{object}	handlers.Success
 //	@Failure		400		{object}	handlers.Error
 //	@Failure		401		{object}	handlers.Error
-//	@Router			/customers [post]
+//	@Router			/customer [post]
 func (h *Handler) CreateCustomer(c *gin.Context) {
-	ctx := c.Request.Context()
-	newCustomer := dto.CustomerDTO{}
+	newCustomer := dto.WebCreateCustomerDTO{}
 	err := c.ShouldBindJSON(&newCustomer)
 	if err != nil {
 		SendError(c, http.StatusBadRequest, Result{data: "invalid request body", err: err})
 		return
 	}
-	id, err := h.storage.SaveNewCustomer(ctx, newCustomer)
+	id, err := h.customerService.Create(newCustomer)
 	if err != nil {
 		SendError(c, http.StatusNotFound, Result{data: "FAIL: error create customer", err: err})
 		return
@@ -74,21 +81,21 @@ func (h *Handler) CreateCustomer(c *gin.Context) {
 //	@Success		200		{object}	handlers.Success
 //	@Failure		400		{object}	handlers.Error
 //	@Failure		401		{object}	handlers.Error
-//	@Router			/customer/:id [patch]
+//	@Router			/customer/{id} [patch]
 func (h *Handler) UpdateCustomer(c *gin.Context) {
-	ctx := c.Request.Context()
 	id, err := strconv.ParseInt(c.Params.ByName("id"), 10, 64)
 	if err != nil {
 		SendError(c, http.StatusBadRequest, Result{data: "incorrect id", err: err})
 		return
 	}
-	UpdateCustomer := dto.CustomerDTO{}
+	UpdateCustomer := dto.WebUpdateCustomerDTO{}
 	err = c.ShouldBindJSON(&UpdateCustomer)
 	if err != nil {
 		SendError(c, http.StatusBadRequest, Result{data: "invalid request body", err: err})
 		return
 	}
-	outId, err := h.storage.UpdateCustomer(ctx, UpdateCustomer, int(id))
+	UpdateCustomer.Id = int(id)
+	outId, err := h.customerService.Update(UpdateCustomer)
 	if err != nil {
 		SendError(c, http.StatusNotFound, Result{data: "FAIL: error update customer", err: err})
 		return
